--- a/src/index.pug
+++ b/src/index.pug
@@ -35,7 +35,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                 span.icon
                   i.fab.fa-telegram
               span.navbar-item
-                a.button.is-link(href='mailto://hitech.business.hub@gmail.com').is-inverted
+                a.button.is-link(href='mailto:hitech.business.hub@gmail.com').is-inverted
                   span.icon
                     i.fa-regular.fa-user
                   span Join the team
@@ -105,14 +105,14 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
               span.icon
                 i.fa-regular.fa-handshake
               span Became as partner
-            a(href='mailto://hitech.business.hub@gmail.com').button.m-2.is-link
+            a(href='mailto:hitech.business.hub@gmail.com').button.m-2.is-link
               span.icon
                 i.fa-regular.fa-user
               span Join the team
       .hero-foot
-        #typo.bd-docs-typo.has-text-centered
-          a.has-text-grey(href='https://t.me/+L3csJ_oxdkplYTEy')
-            | Also join our largest business community in telegram
+        //#typo.bd-docs-typo.has-text-centered
+        //  a.has-text-grey(href='https://t.me/+L3csJ_oxdkplYTEy')
+        //    | Also join our largest business community in telegram
           //p.has-text-grey-light
             //| Also join our largest business community in telegram
             //br
