--- a/src/index.pug
+++ b/src/index.pug
@@ -14,16 +14,16 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
             .navbar-brand
               a.navbar-item
                 img(width='115', src=require("./img/logo.svg"))
-              .is-hidden-desktop.navbar-end
+              .is-hidden-desktop.navbar-end.is-flex.is-align-items-center
                 a(href='https://www.linkedin.com/company/hi-tech-business-hub')
-                  span.icon
-                    i.fab.fa-linkedin
+                  span.icon.is-large
+                    i.fab.fa-linkedin.fa-lg
                 a(href='https://github.com/hitechbusinesshub')
-                  span.icon
-                    i.fab.fa-github
+                  span.icon.is-large
+                    i.fab.fa-github.fa-lg
                 a(href='https:/t.me/ipgeorgia')
-                  span.icon
-                    i.fab.fa-telegram
+                  span.icon.is-large
+                    i.fab.fa-telegram.fa-lg
             .navbar-end.is-hidden-touch
               a.navbar-item(href='https://www.linkedin.com/company/hi-tech-business-hub')
                 span.icon
@@ -64,14 +64,14 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
               .columns
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon
+                    span.icon.bd-link-icon.is-large
                       i.title.fa-regular.fa-paper-plane
                     .bd-link-body
                       .bd-link-subtitle
                         | Supporting Ecosystem participants, with Legal, Administrative, project management and other services.
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon
+                    span.icon.bd-link-icon.is-large
                       i.title.fa-regular.fa-paper-plane
                     .bd-link-body
                       .bd-link-subtitle
@@ -80,14 +80,14 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
               .columns
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon
+                    span.icon.bd-link-icon.is-large
                       i.title.fa-regular.fa-handshake
                     .bd-link-body
                       .bd-link-subtitle
                         | Serving as a Human resource Hub, IT Headhunting, also DevRel think tank for Ecosystem participants as well as for Georgian Businesses who would like to have a Quality Human resources in IT, hardware and Software
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon
+                    span.icon.bd-link-icon.is-large
                       i.title.fa-regular.fa-user
                     .bd-link-body
                       .bd-link-subtitle
