--- a/src/index.pug
+++ b/src/index.pug
@@ -10,28 +10,18 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
     section.hero.is-link.is-small.is-fullheight-with-navbar.pb-2
       .hero-head
         nav.navbar
-          .container
+          .container.is-hidden-touch
             .navbar-brand
               a.navbar-item
                 img(width='115', src=require("./img/logo.svg"))
-              .is-hidden-desktop.navbar-end
-                a(href='https://www.linkedin.com/company/hi-tech-business-hub')
-                  span.icon
-                    i.fab.fa-linkedin
-                a(href='https://github.com/hitechbusinesshub')
-                  span.icon
-                    i.fab.fa-github
-                a(href='https:/t.me/ipgeorgia')
-                  span.icon
-                    i.fab.fa-telegram
-            .navbar-end.is-hidden-touch
-              a.navbar-item(href='https://www.linkedin.com/company/hi-tech-business-hub')
+            .navbar-end
+              a.navbar-item(href='https://www.linkedin.com/company/hi-tech-business-hub', target='_blank')
                 span.icon
                   i.fab.fa-linkedin
-              a.navbar-item(href='https://github.com/hitechbusinesshub')
+              a.navbar-item(href='https://github.com/hitechbusinesshub', target='_blank')
                 span.icon
                   i.fab.fa-github
-              a.navbar-item(href='https:/t.me/ipgeorgia')
+              a.navbar-item(href='https://t.me/+NbqPJ1erXz0zMGIy', target='_blank')
                 span.icon
                   i.fab.fa-telegram
               span.navbar-item
@@ -40,10 +30,23 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     i.fa-regular.fa-user
                   span Join the team
               span.navbar-item
-                a.button.is-link(href='https://forms.gle/7F4zgBW2mz2jNRMcA').is-inverted
+                a.button.is-link(href='https://forms.gle/7F4zgBW2mz2jNRMcA', target='_blank').is-inverted
                   span.icon
                     i.fa-regular.fa-handshake
                   span Became as partner
+          .container.is-hidden-desktop.has-text-centered
+            a.navbar-item
+              img(width='115', src=require("./img/logo.svg"))
+            .navbar-end
+              a(href='https://www.linkedin.com/company/hi-tech-business-hub', target='_blank')
+                span.icon
+                  i.fab.fa-linkedin
+              a(href='https://github.com/hitechbusinesshub', target='_blank')
+                span.icon
+                  i.fab.fa-github
+              a(href='https://t.me/+NbqPJ1erXz0zMGIy', target='_blank')
+                span.icon
+                  i.fab.fa-telegram
       .hero-body.is-block
         .container.content.mb-6.has-text-centered
           img(style='width: 350px;', src=require("./img/logo.svg")).is-inline-block.is-hidden-touch
@@ -101,7 +104,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
           h3.subtitle
             | Our business hub constantly and actively growing and helping to transfer and create a business in Georgia. If you have experience adapting business projects in Georgia or you are an experienced consultant or just think that we can be useful to each other - write to us. We will definitely contact you.
           .container.has-text-centered
-            a(href='https://forms.gle/7F4zgBW2mz2jNRMcA').button.m-2.is-link
+            a(href='https://forms.gle/7F4zgBW2mz2jNRMcA', target='_blank').button.m-2.is-link
               span.icon
                 i.fa-regular.fa-handshake
               span Became as partner
