Revert "fix icons"
This reverts commit a69b5de9584c081f81bcc7ea402865bcd019e726.

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,16 +14,16 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
             .navbar-brand
               a.navbar-item
                 img(width='115', src=require("./img/logo.svg"))
-              .is-hidden-desktop.navbar-end.is-flex.is-align-items-center
+              .is-hidden-desktop.navbar-end
                 a(href='https://www.linkedin.com/company/hi-tech-business-hub')
-                  span.icon.is-large
-                    i.fab.fa-linkedin.fa-lg
+                  span.icon
+                    i.fab.fa-linkedin
                 a(href='https://github.com/hitechbusinesshub')
-                  span.icon.is-large
-                    i.fab.fa-github.fa-lg
+                  span.icon
+                    i.fab.fa-github
                 a(href='https:/t.me/ipgeorgia')
-                  span.icon.is-large
-                    i.fab.fa-telegram.fa-lg
+                  span.icon
+                    i.fab.fa-telegram
             .navbar-end.is-hidden-touch
               a.navbar-item(href='https://www.linkedin.com/company/hi-tech-business-hub')
                 span.icon
@@ -64,14 +64,14 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
               .columns
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon.is-large
+                    span.icon.bd-link-icon
                       i.title.fa-regular.fa-paper-plane
                     .bd-link-body
                       .bd-link-subtitle
                         | Supporting Ecosystem participants, with Legal, Administrative, project management and other services.
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon.is-large
+                    span.icon.bd-link-icon
                       i.title.fa-regular.fa-paper-plane
                     .bd-link-body
                       .bd-link-subtitle
@@ -80,14 +80,14 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
               .columns
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon.is-large
+                    span.icon.bd-link-icon
                       i.title.fa-regular.fa-handshake
                     .bd-link-body
                       .bd-link-subtitle
                         | Serving as a Human resource Hub, IT Headhunting, also DevRel think tank for Ecosystem participants as well as for Georgian Businesses who would like to have a Quality Human resources in IT, hardware and Software
                 .column.is-half
                   a.bd-link
-                    span.icon.bd-link-icon.is-large
+                    span.icon.bd-link-icon
                       i.title.fa-regular.fa-user
                     .bd-link-body
                       .bd-link-subtitle
