--- a/src/index.pug
+++ b/src/index.pug
@@ -153,4 +153,4 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
         span.p-1
           | N(N)LE Hi-Tech Business Hub ID: 402214590
         a(href='/privacy.html', target='_blank').p-1
-          span Privacy policy
+          //span Privacy policy
