--- a/src/index.pug
+++ b/src/index.pug
@@ -77,7 +77,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/ip_channel.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                       span.is-bold Business channel
                 .column.content
-                  a.has-text-centered(href='t.me/itgeorgia', target='_blank')
+                  a.has-text-centered(href='https://t.me/itgeorgia', target='_blank')
                     figure.image.is-128x128
                       img(src=require("./img/it_chat.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                       span.is-bold IT chat
