--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
     meta(name='robots', content='noarchive')
     meta(name='description', content="We help growing up business and startups in Georgia")
     title Hi-Tech Business hub - Grow up your business in Georgia
+    link(rel='shortcut icon', type='image/png', href=require("./img/favicon.png?sizes[]=192&quality=100").src)
   body
     section.hero.is-link.is-small.is-fullheight-with-navbar.pb-2
       .hero-head.is-hidden-touch
