--- a/src/privacy.pug
+++ b/src/privacy.pug
@@ -6,12 +6,12 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
     meta(name='robots', content='noarchive')
     meta(name='description', content="We help growing up business and startups in Georgia")
     title Hi-Tech Business hub - Privacy policy
+    link(rel='shortcut icon', type='image/png', href=require("./img/favicon.png?sizes[]=192&quality=100").src)
   body
     section.container.content.is-center.pt-6
       h1.title.has-text-centered Privacy policy
       p The procedure for collecting, storing, processing and using personal data in accordance with the requirements of the GDPR (
         a(href='https://ogdpr.eu/ru', target='_blank') ogdpr.eu/ru
-
         |)
       p The collection of personal data (full name of the applicant, date and place of birth, contact information, passport details, data of the Company Registration Certificate (for legal entities and individual entrepreneurs), place of residence) is carried out through the official collection sources of the Association, namely: e-mail of the Association
         a(href='mailto:hitech.business.hub@gmail.com', target='_blank') &nbsp;hitech.business.hub@gmail.com&nbsp;
