--- a/src/index.pug
+++ b/src/index.pug
@@ -97,6 +97,11 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128
                       img(src=require("./img/job_channel.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                       span.is-bold Job channel
+                .column.content.is-one-quarter
+                  a.has-text-centered(href='https://gervice.ge', target='_blank')
+                    figure.image.is-128x128
+                      img(src=require("./img/gervice.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
+                      span.is-bold Gervice
 
     section.hero.is-white.is-small.pb-2
       .hero-body
