--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -4,3 +4,12 @@
 .white-border {
   border: 4px solid #fff;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.ravestag {
+  position: relative;
+  left: -39%;
+}
