--- a/src/index.pug
+++ b/src/index.pug
@@ -86,7 +86,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                   a.has-text-centered(href='https://t.me/c/1635842111/74', target='_blank')
                     figure.image.is-128x128
                       img(src=require("./img/hub_channel.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
-                      span.is-bold Turnkey relocation
+                      span.is-bold.nowrap Turnkey relocation
                 .column.content.is-one-quarter
                   a.has-text-centered(href='https://novator-house.com/networking', target='_blank')
                     figure.image.is-128x128
@@ -102,6 +102,11 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128
                       img(src=require("./img/gervice.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
                       span.is-bold Gervice
+                .column.content.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ravestagbot?start=5364782509', target='_blank')
+                    figure.image.is-128x128
+                      img(src=require("./img/ravestag.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
+                      span.is-bold.nowrap.ravestag Ravestag Online crypto exchange
 
     section.hero.is-white.is-small.pb-2
       .hero-body
