--- a/src/index.pug
+++ b/src/index.pug
@@ -33,7 +33,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     i.fa-regular.fa-user
                   span Join the team
               span.navbar-item
-                a.button.is-link(href='https://forms.gle/7F4zgBW2mz2jNRMcA', target='_blank').is-inverted
+                a.button.is-link(href='https://docs.google.com/forms/d/1nFclNcpENZMT9bsmf9uTawc3NwFGKNDqhBgVsW0tWsk/viewform', target='_blank').is-inverted
                   span.icon
                     i.fa-regular.fa-handshake
                   span Became as partner
@@ -155,7 +155,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
           h3.subtitle
             | Our business hub constantly and actively growing and helping to transfer and create a business in Georgia. If you have experience adapting business projects in Georgia or you are an experienced consultant or just think that we can be useful to each other - write to us. We will definitely contact you.
           .container.has-text-centered
-            a(href='https://forms.gle/7F4zgBW2mz2jNRMcA', target='_blank').button.m-2.is-link
+            a(href='https://docs.google.com/forms/d/1nFclNcpENZMT9bsmf9uTawc3NwFGKNDqhBgVsW0tWsk/viewform', target='_blank').button.m-2.is-link
               span.icon
                 i.fa-regular.fa-handshake
               span Became as partner
