--- a/src/privacy.pug
+++ b/src/privacy.pug
@@ -14,7 +14,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
         a(href='https://ogdpr.eu/ru', target='_blank') ogdpr.eu/ru
         |)
       p The collection of personal data (full name of the applicant, date and place of birth, contact information, passport details, data of the Company Registration Certificate (for legal entities and individual entrepreneurs), place of residence) is carried out through the official collection sources of the Association, namely: e-mail of the Association
-        a(href='mailto:hitech.business.hub@gmail.com', target='_blank') &nbsp;hitech.business.hub@gmail.com&nbsp;
+        a(href='mailto:hitech.business.hub@gmail.com', target='_blank') &nbsp;hitech.business.hub@gmail.com&nbsp;, telegram bot https://t.me/ipgeorgiabot
         | and other sources of information collection officially announced in the
         a(href='https://t.me/+NbqPJ1erXz0zMGIy', target='_blank') &nbsp;channel
         | .
