--- a/src/bulma.scss
+++ b/src/bulma.scss
@@ -9,12 +9,6 @@
   white-space: nowrap;
 }
 
-.ravestag {
-  position: relative;
-  left: -39%;
-}
-
-.gervice {
-  position: relative;
-  left: -39%;
+.height-100 {
+  height: 100%;
 }
