--- a/src/index.pug
+++ b/src/index.pug
@@ -73,6 +73,21 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
           br
 
           p.title.content
+            | Our services
+          .container.is-centered.is-flex.is-justify-content-center
+            .content
+                .columns.is-multiline.has-text-info.is-flex.is-justify-content-center.has-text-centered
+                  .column.is-half
+                    article.notification.media.has-background-white.height-100
+                      .media-content
+                        .content
+                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/bsreg', target='_blank') Регистрация бизнеса/ИП/ Юридические услуги/Бухгалтерия/Делопроизводство
+                  .column.is-half
+                    article.notification.media.has-background-white.height-100
+                      .media-content
+                        .content
+                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/rp', target='_blank') ВНЖ
+          p.title.content
             | Our projects
           .container.is-centered.is-flex.is-justify-content-center
             .content
@@ -125,13 +140,6 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/neurovision.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Умное видеонаблюдение с применением нейросетей
-                .column.is-3.is-one-quarter
-                  a.has-text-centered(href='https://ipgeorgia.ge/bsreg', target='_blank')
-                    figure.image.is-128x128.is-inline-block
-                      img(src=require("./img/register_business.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
-                    div
-                      a Регистрация бизнеса/ИП/ Юридические услуги/Бухгалтерия/Делопроизводство/ВНЖ
-
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
