--- a/src/index.pug
+++ b/src/index.pug
@@ -108,6 +108,12 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     div
                       a Business channel
                 .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/itgeorgia', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/it_chat.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a IT chat
+                .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://ipgeorgia.ge/relocation', target='_blank')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/hub_channel.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
@@ -143,6 +149,12 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/neurovision.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Умное видеонаблюдение с применением нейросетей
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://upstartup.global/business_accelerator', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/upstartup.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Upstartup
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
