--- a/src/index.pug
+++ b/src/index.pug
@@ -91,7 +91,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
           br
           br
           p.title.content
-            | Our projects
+            | Our projects and partners
           .container.is-centered.is-flex.is-justify-content-center
             .content
               .columns.has-text-centered.is-multiline.is-flex.is-justify-content-center
