--- a/src/index.pug
+++ b/src/index.pug
@@ -155,6 +155,18 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/upstartup.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Upstartup
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ipgeorgiabot', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/bot.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Наш бот
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://manageripgeorgia.atlassian.net/wiki/spaces/FAQ/pages/35684353/Payoneer', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/payoneer.png?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Payoneer
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
