--- a/src/index.pug
+++ b/src/index.pug
@@ -167,6 +167,18 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/payoneer.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Payoneer
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ip_global', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/channel_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a ИП/Бизнес Глобал
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ipglobalchat', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/chat_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a ИП/Бизнес Глобал-ЧАТ
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
