--- a/src/index.pug
+++ b/src/index.pug
@@ -148,7 +148,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/neurovision.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
-                      a Умное видеонаблюдение с применением нейросетей
+                      a Smart video surveillance using neural networks
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://upstartup.global/business_accelerator', target='_blank')
                     figure.image.is-128x128.is-inline-block
@@ -160,7 +160,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/bot.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
-                      a Наш бот
+                      a Our telegram-bot
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://manageripgeorgia.atlassian.net/wiki/spaces/FAQ/pages/35684353/Payoneer', target='_blank')
                     figure.image.is-128x128.is-inline-block
@@ -172,13 +172,13 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/channel_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
-                      a ИП/Бизнес Глобал
+                      a Business Global channel
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://t.me/ipglobalchat', target='_blank')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/chat_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
-                      a ИП/Бизнес Глобал-ЧАТ
+                      a Business Global chat
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
