--- a/src/index.pug
+++ b/src/index.pug
@@ -136,7 +136,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/gervice.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
-                      a Gervice (Организация комфортной жизни в Грузии)
+                      a Gervice (Organization of a comfortable life in Georgia)
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://t.me/ravestagbot?start=5364782509', target='_blank')
                     figure.image.is-128x128.is-inline-block
