+new logo, swapped links places, new links

--- a/src/index.pug
+++ b/src/index.pug
@@ -146,7 +146,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://t.me/ipgeorgiabot', target='_blank')
                     figure.image.is-128x128.is-inline-block
-                      img(src=require("./img/bot.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                      img(src=require("./img/botLogoGe.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Our telegram-bot in Georgia
                 .column.is-3.is-one-quarter
@@ -162,17 +162,17 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     div
                       a Payoneer
                 .column.is-3.is-one-quarter
-                  a.has-text-centered(href='https://t.me/ip_global', target='_blank')
-                    figure.image.is-128x128.is-inline-block
-                      img(src=require("./img/channel_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
-                    div
-                      a Business Global channel
-                .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://t.me/ipglobalchat', target='_blank')
                     figure.image.is-128x128.is-inline-block
                       img(src=require("./img/chat_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Business Global chat
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ip_global', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/channel_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Business Global channel
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
