+plBot; text fixes

--- a/src/index.pug
+++ b/src/index.pug
@@ -64,7 +64,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                 i.fab.fa-telegram.fa-lg
         .container.has-text-centered
           p.title.content
-            | We are Hi-Tech Business hub in Georgia
+            | We are Hi-Tech Business hub in Georgia and international business, including in other countries
           p.subtitle.content
             | The Activity of the association involves developing the Ecosystem of HighTech Legal entities as well as non legal entities like individuals involved in developing highTech products or services, (such as e.g. Software development IT, IoT, hardware development, digital Entrepreneurship etc.)
         .container.content
@@ -81,12 +81,12 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                     article.notification.media.has-background-white.height-100
                       .media-content
                         .content
-                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/bsreg', target='_blank') Регистрация бизнеса/ИП/ Юридические услуги/Бухгалтерия/Делопроизводство
+                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/bsreg', target='_blank') Business Registration/Individual Entrepreneur/Legal Services/Accounting/Office Management
                   .column.is-half
                     article.notification.media.has-background-white.height-100
                       .media-content
                         .content
-                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/rp', target='_blank') ВНЖ
+                          a.has-text-centered.title.is-size-4(href='https://ipgeorgia.ge/rp', target='_blank') Residence permit
           br
           br
           br
@@ -152,9 +152,15 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://t.me/ippolandbot', target='_blank')
                     figure.image.is-128x128.is-inline-block
-                      img(src=require("./img/botLogo.png?sizes[]=500&quality=100").src).is-rounded.white-border
+                      img(src=require("./img/botLogoPl.png?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Our telegram-bot in Poland
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://t.me/ipspainbot', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/botLogoSp.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Our telegram-bot in Spain
                 .column.is-3.is-one-quarter
                   a.has-text-centered(href='https://manageripgeorgia.atlassian.net/wiki/spaces/FAQ/pages/35684353/Payoneer', target='_blank')
                     figure.image.is-128x128.is-inline-block
@@ -218,7 +224,7 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
           h1.title.is-link
             | We are open to cooperation
           h3.subtitle
-            | Our business hub constantly and actively growing and helping to transfer and create a business in Georgia. If you have experience adapting business projects in Georgia or you are an experienced consultant or just think that we can be useful to each other - write to us. We will definitely contact you.
+            | Our business hub constantly and actively growing and helping to transfer and create a business in Georgia and international business, including in other countries. If you have experience adapting business projects or you are an experienced consultant or just think that we can be useful to each other - write to us. We will definitely contact you.
           .container.has-text-centered
             a(href='https://docs.google.com/forms/d/1nFclNcpENZMT9bsmf9uTawc3NwFGKNDqhBgVsW0tWsk/viewform', target='_blank').button.m-2.is-link
               span.icon
