--- a/src/index.pug
+++ b/src/index.pug
@@ -179,6 +179,12 @@ html(xmlns='http://www.w3.org/1999/html', lang='en')
                       img(src=require("./img/channel_global.jpeg?sizes[]=500&quality=100").src).is-rounded.white-border
                     div
                       a Business Global channel
+                .column.is-3.is-one-quarter
+                  a.has-text-centered(href='https://ipgeorgia.ge/en/faq-subscribe', target='_blank')
+                    figure.image.is-128x128.is-inline-block
+                      img(src=require("./img/faq.jpg?sizes[]=500&quality=100").src).is-rounded.white-border
+                    div
+                      a Subscribe to the FAQ
     section.hero.is-white.is-small.pb-2
       .hero-body
         .container
